Fix alignment on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,14 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+
+html{
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+}
 body {
+  width:100%;
+  overflow-x: hidden;
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
           box-sizing: border-box;
